package com.clinica.veterinaria.model;

public enum EstadoCita {
    PENDIENTE, COMPLETADA, CANCELADA
}
