package com.clinica.veterinaria.model;

public enum EstadoFactura {
    PENDIENTE,
    PAGADA,
    VENCIDA
}
