package com.clinica.veterinaria.model;

public enum EstadoTratamiento {
    ACTIVO,
    PAUSADO,
    FINALIZADO
}