package com.clinica.veterinaria.model;

public enum RolUsuario {
    ADMIN,
    VETERINARIO,
    RECEPCIONISTA,
    CLIENTE
}
