package com.clinica.veterinaria.model;

public enum TipoDocumentoClinico {
    RADIOGRAFIA,
    ANALISIS,
    INFORME,
    OTRO
}