package com.clinica.veterinaria.model;

public enum TipoTratamiento {
    MEDICACION,
    CIRUGIA,
    SEGUIMIENTO
}